Add fretilizing reactions

--- a/src/main/resources/personalities/personality_en.properties
+++ b/src/main/resources/personalities/personality_en.properties
@@ -2,3 +2,7 @@ reaction.watering.template=Hey {0}, we need some water! ({1})
 reaction.watering.regexp=^(Hey @.*, we need some water! .*$)
 reaction.watered.template=Yum! Enjoying some fresh water! ({0})
 reaction.watered.regexp=^(Yum! Enjoying some fresh water!).*$
+reaction.fertilizing.template=We are hungry, {0}! How about some food? ({1})
+reaction.fertilizing.regexp=^(We are hungry, @.*! How about some food? .*$)
+reaction.fertilized.template=Wow, thanks for the food! It hit the spot! ({0})
+reaction.fertilized.regexp=^(Wow, thanks for the food! It hit the spot! .*$)
