Add sunny day reaction and support for emoji

--- a/src/main/resources/personalities/personality_en.properties
+++ b/src/main/resources/personalities/personality_en.properties
@@ -1,8 +1,10 @@
-reaction.watering.template=Hey {0}, we need some water! ({1})
-reaction.watering.regexp=^(Hey @.*, we need some water! .*$)
-reaction.watered.template=Yum! Enjoying some fresh water! ({0})
-reaction.watered.regexp=^(Yum! Enjoying some fresh water!).*$
-reaction.fertilizing.template=We are hungry, {0}! How about some food? ({1})
-reaction.fertilizing.regexp=^(We are hungry, @.*! How about some food? .*$)
-reaction.fertilized.template=Wow, thanks for the food! It hit the spot! ({0})
-reaction.fertilized.regexp=^(Wow, thanks for the food! It hit the spot! .*$)
+reaction.watering.template=Hey {0}, we need some water! \uD83D\uDCA7 ({1})
+reaction.watering.regexp=^(Hey @.*, we need some water! \uD83D\uDCA7 .*$)
+reaction.watered.template=Yum! Enjoying some fresh water! \uD83D\uDCA7 ({0})
+reaction.watered.regexp=^(Yum! Enjoying some fresh water! \uD83D\uDCA7 .*$)
+reaction.fertilizing.template=We are hungry, {0}! How about some food? \uD83C\uDF72 ({1})
+reaction.fertilizing.regexp=^(We are hungry, @.*! How about some food? \uD83C\uDF72 .*$)
+reaction.fertilized.template=Wow, thanks for the food! \uD83C\uDF72 It hit the spot! ({0})
+reaction.fertilized.regexp=^(Wow, thanks for the food! \uD83C\uDF72 It hit the spot! .*$)
+reaction.sunnyDay.template=The grey skies \u2601 are gone! We are enjoying some of that Irish sun shine \u2600 ({0})
+reaction.sunnyDay.regexp=^(The grey skies \u2601 are gone! We are enjoying some of that Irish sun shine \u2600 .*$)
